website/versioned_docs/version-1.1.0/releases.md
---
id: version-1.1.0-releases
title: OpenEBS Releases
sidebar_label: Releases
original_id: releases
---

------

<br>



| Release Version                  | Notes                                                        | Highlights                                                   |
| -------------------------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
| <br/><font size="5">1.1.0</font> | <br/> <font size="4">Latest Release</font><br/> (Recommended)<br/> [Release Notes](https://github.com/openebs/openebs/releases/tag/1.1.0)<br/> [Upgrade Steps](v110/docs/next/upgrade.html)<br/> | - Support for an alpha version of CSI driver with limited functionality for provisioning and de-provisioning of cStor volumes.<br/>- Support for the upgrade of OpenEBS storage pools and volumes through Kubernetes Job. As a user, you no longer have to download scripts to upgrade from 1.0 to 1.1, like in earlier releases.<br/>- Enhanced Prometheus metrics exported by Jiva for identifying whether an iSCSI Initiator is connected to Jiva target.<br/>- Enhanced NDM operator capabilities for handling NDM CRDs installation and upgrade. Earlier this process was handled through maya-apiserver. <br/>- Enhanced velero-plugin to take backup based on the `openebs.io/cas-type:cstor` and it will skip backup for unsupported volumes(or storage providers).<br/>- Enhanced velero-plugin to allow users to specify a `backupPathPrefix` for storing the volume snapshots in a custom location. This allows users to save/backup configuration and volume snapshot data under the same location.<br/>- Added an ENV flag which can be used to disable default config creation. The default storage configuration can be modified after installation, but it is going to be overwritten by the OpenEBS API Server.The recommended approach for customizing is to create their own storage configuration using the default options as examples/guidance.<br>- Fixes an issue where rebuilding cStor volume replica failed if the cStor volume capacity was changed after the initial provisioning of the cStor volume.<br/>- Fixes an issue with cStor snapshot taken during transition of replica's rebuild status.<br>- Fixes an issue where application file system was breaking due to the deletion of Jiva auto-generated snapshots.<br>- Fixes an issue where NDM pod was getting restarted while probing for details from the devices that had write cache supported.<br/>- Fixes an issue in NDM where Seachest probe was holding open file descriptors to LVM devices and LVM devices were unable to detach from the Node due to NDM hold on device.<br/>- Fixes a bug where backup was failing where `openebs operator` was installed through helm. `velero-plugin` was checking `maya-apiserver` name and it was different when you have installed via helm based method. Updated velero-plugin to check label of maya-apiserver service name.<br> |
| <br/>1.0.0                       | <br/> [Release Notes](https://github.com/openebs/openebs/releases/tag/1.0.0)<br> [Release Blog](https://blog.openebs.io/openebs-announces-the-availability-of-version-1-0-2bc84e69f27b)<br> [Upgrade Steps](v100/docs/next/upgrade.html)<br> | - Introduced a cluster level component called NDM operator to manages the access to block devices, selecting & binding BD to BDC, cleaning up the data from the released BD. <br>- Support for using Block Devices for OpenEBS Local PV. <br/>- Enhanced cStor Data Engine to allow interoperability of cStor Replicas across different versions. <br/>- Enhanced the cStor Data Engine containers to contain troubleshooting utilities.<br/>- Enhanced the metrics exported by cStor Pools to include details of the provisioning errors.<br/>- Fixes an issue where cStor replica snapshots created for the rebuild were not deleted, causing space reclamation to fail.<br/>- Fixes an issue where cStor volume used space was showing a very low value than actually used.<br/>- Fixes an issue where Jiva replicas failed to register with its target if there was an error during initial registration.<br/>- Fixes an issue where NDM would create a partitioned OS device as a block device.<br/>- Fixes an issue where Jiva replica data was not clean up if the PVC and its namespace were deleted prior to scrub job completion.<br/>- Fixes an issue where Velero Backup/Restore was not working with hostpath Local PVs.<br/>- Upgraded the base ubuntu images for the containers to fix the security vulnerabilities reported in Ubuntu Xenial.<br/>- Custom resource (Disk) used in earlier releases has been changed to Block Device. |
| <br/>0.9.0                       | <br/>[Release Notes](https://github.com/openebs/openebs/releases/tag/0.9) | Enhanced the cStor Data Engine containers to contain troubleshooting utilities.-Enhanced cStor Data Engine to allow interoperability of cStor Replicas across different versions. -Support for using Block Devices for OpenEBS Local PV.<br>- Support for Dynamic Provisioning of Local PV <br>- Enhanced the cStor Volumes to support Backup/Restore to S3 compatible storage using the incremental snapshots supported by cStor Volumes.<br>- Enhanced the cStor Volume Replica to support an anti-affinity feature that works across PVs.<br>- Enhanced the cStor Volume to support scheduling the cStor Volume Targets along side the application pods that interacts with the cStor Volume.<br>- Enhances the Jiva Volume provisioning to provide an option called DeployInOpenEBSNamespace.<br>- Enhanced the cStor Volume Provisioning to be customized for varying workload or platform type during the volume provisioning.<br>- Enhanced the cStor Pools to export usage statistics as prometheus metrics.<br>- Enhanced the Jiva Volume replica rebuild process by eliminating the need to do a rebuild if the Replica already has all the required data to serve the IO.<br>- Enhanced the Jiva Volume - replica provisioning to pin the Replica’s to the nodes where they are initially scheduled using Kubernetes nodeAffinity.<br>- Fixes an issue where NDM pods failed to start on nodes with selinux=on.<br>- Fixes an issue where cStor Volume with single replicas were shown to be in Degraded, rebuilding state.<br>- Fixes an issue where user was able to delete a PVC, even if there were clones created from it, resulting in data loss for the cloned volumes.<br>- Fixes an issue where user was able to delete a PVC, even if there were clones created from it, resulting in data loss for the cloned volumes.<br>- Fixes an issue where cStor Volumes failed to provision if the `/var/openebs/` directory was not editable by cStor pods like in the case of SuSE Platforms.<br>- Fixes an issue where Jiva Volume - Target can mark a replica as offline if the replica takes longer than 30s to complete the sync/unmap IO.<br>- Fixes an issue with Jiva volume - space reclaim thread, that was erroring out with an exception if the replica is disconnected from the target. |
| <br/>0.8.2                       | [Release Notes](https://github.com/openebs/openebs/releases/tag/0.8.2) | Enhanced the metrics exported by cStor Pools to include details of the provisioning errors.-Enhanced the cStor Data Engine containers to contain troubleshooting utilities.-Enhanced cStor Data Engine to allow interoperability of cStor Replicas across different versions. <br>- Fixed an issue causing cStor Volume Replica CRs to be stuck, when the OpenEBS<br>   namespace was being deleted.<br>- Fixed an issue where a newly added cStor Volume Replica may not be successfully<br>   registered with the cStor target, if the cStor tries to connect to Replica before the replica<br/>   is completely initialised.<br>- Fixed an issue with Jiva Volumes where target can mark the Replica as Timed out on IO,<br/>   even when the Replica might actually be processing the Sync IO.<br>- Fixed an issue with Jiva Volumes that would not allow for Replicas to re-connect with the<br/>   Target, if the initial Registration failed to successfully process the hand-shake request.<br>- Fixed an issue with Jiva Volumes that would cause Target to restart when a send<br/>   diagnostic command was received from the client<br>- Fixed an issue causing PVC to be stuck in pending state, when there were more than<br/>   one PVCs associated with an Application Pod<br>- Toleration policy support for cStorStoragePool.<br/> |
| 0.8.1                            | [Release Blog](https://blog.openebs.io/openebs-releases-0-8-1-with-stability-fixes-and-improved-documentation-374dd6b7c4a5) <br> <br> [Release Notes](https://github.com/openebs/openebs/releases/tag/0.8.1) | Fixes an issue where cStor replica snapshots created for the rebuild were not deleted, causing space reclamation to fail.-Enhanced the metrics exported by cStor Pools to include details of the provisioning errors.-Enhanced the cStor Data Engine containers to contain troubleshooting utilities. <br>- Ephemeral Disk Support <br />- Enhanced the placement of cStor volume replica in a distriubuted randomnly between the available pools.<br />- Enhanced the NDM to fetch additional details about the underlying disks via SeaChest.<br />- Enhanced the NDM  to add additional information to the DiskCRs like if the disks is partitioned or has a filesystem on it. <br />- Enhanced the OpenEBS CRDs to include custom columns to be displayed using  `kubectl get ` output of the CR. This feature requires K8s 1.11 or higher.<br />- Fixed an issue where cStor volume causes timeout for iSCSI discovery command and can potentially trigger a K8s vulnerability that can bring down a node with high RAM usage. |
| 0.8.0                            | [Release Blog](https://blog.openebs.io/openebs-0-8-release-allows-you-to-snapshot-and-clone-cstor-volumes-ebe09612f8b1) <br> <br> [Release Notes](https://github.com/openebs/openebs/releases/tag/0.8) | Fixes an issue where cStor volume used space was showing a very low value than actually used.-Fixes an issue where cStor replica snapshots created for the rebuild were not deleted, causing space reclamation to fail.-Enhanced the metrics exported by cStor Pools to include details of the provisioning errors.<br>- cStor Snapshot & Clone <br />-  cStor volume & Pool runtime status<br/>- Target Affinity for both Jiva & cStor <br/>- Target namespace for cStor <br/>- Enhance the volume metrics exporter<br/>- Enhance Jiva to clear up internal snapshot taken during   Replica rebuild<br/>- Enhance Jiva to support sync and unmap IOs<br/>- Enhance cStor for recreating pool by automatically selecting the disks. |
| 0.7.2                            | [Release Notes](https://github.com/openebs/openebs/releases/tag/0.7.2) | Fixes an issue where jiva replicas failed to register with its target if there was an error during initial registration.-Fixes an issue where cStor volume used space was showing a very low value than actually used.-Fixes an issue where cStor replica snapshots created for the rebuild were not deleted, causing space reclamation to fail.<br>- Support for   clearing sapce used by Jiva replica after the volume is deleted using Cron   Job.<br/>- Support for a storage policy that can disable the Jiva Volume Space   reclaim.<br/>- Support Target Affinity fort Jiva target Pod on the same node as the   Application Pod.<br/>- Enahanced Jiva related to internal snapshots for rebuilding Jiva.<br/> - Enhanced exporting cStor volume metrics to prometheus |
| 0.7.0                            | [Release Blog](https://blog.openebs.io/openebs-0-7-release-pushes-cstor-storage-engine-to-field-trials-1c41e6ad8c91)<br><br> [Release Notes](https://github.com/openebs/openebs/releases/tag/v0.7) | Fixes an issue where NDM would create a partitioned OS device as a block device.-Fixes an issue where jiva replicas failed to register with its target if there was an error during initial registration.-Fixes an issue where cStor volume used space was showing a very low value than actually used.<br>- Enhanced NDM   to discover block devices attached to Nodes     .<br/>- Alpha support for cStor Engine<br/>- Naming convention of Jiva Storage pool as 'default' and StorageClass as   'openebs-jiva-default'<br/>- Naming convention of cStor Storage pool as 'cstor-sparse-pool' and   StorageClass as 'openebs-cstor-sparse'<br/>- Support for specifying replica count,CPU/Memory Limits per PV,Choice of  Storage Engine, Nodes on which data copies should be copied. |
| 0.6.0                            | [Release Blog](https://blog.openebs.io/openebs-0-6-serves-ios-amidst-chaos-and-much-more-45c68eb59c6a)<br><br>[Release Notes](https://github.com/openebs/openebs/releases/tag/v0.6) | Fixes an issue where jiva replica data was not clean up if the PVC and its namespace were deleted prior to scrub job completion.-Fixes an issue where NDM would create a partitioned OS device as a block device.-Fixes an issue where jiva replicas failed to register with its target if there was an error during initial registration.<br>- Integrate  the Volume Snapshot capabilities with Kubernetes Snapshot controller.<br/>- Enhance maya-apiserver to use CAS Templates for orchestrating new   Storage Engines.<br/>- Enhance mayactl to show details about replica and Node details where replicas   are running.<br/>- Enhance maya-apiserver to schedule Replica Pods on specific nodes using   nodeSelector.<br/>- Enhance e2e tests to simulate chaos at different layers such as - CPU,   RAM, Disk, Network, and Node.<br/>- Support for deploying OpenEBS via Kubernetes stable Helm Charts.<br/>- Enhanced Jiva volume to handle more read only volume  scenarios |
| 0.5.4                            | [Release Notes](https://github.com/openebs/openebs/releases/tag/v0.5.4) | Fixes an issue where Velero Backup/Restore was not working with hostpath Local PVs.-Fixes an issue where jiva replica data was not clean up if the PVC and its namespace were deleted prior to scrub job completion.-Fixes an issue where NDM would create a partitioned OS device as a block device.<br> - Provision to   specify filesystems other than ext4 (default).<br/>- Support for XFS filesystem format for mongodb StatefulSet using OpenEBS Persistent Volume.<br/>- Increased integration test & e2e coverage in the CI<br/>- OpenEBS is now available as a stable chart from Kubernetes |
| 0.5.3                            | [Release Notes](https://github.com/openebs/openebs/releases/tag/v0.5.3) | Upgraded the base ubuntu images for the containers to fix the security vulnerabilities reported in Ubuntu Xenial.-Fixes an issue where Velero Backup/Restore was not working with hostpath Local PVs.-Fixes an issue where jiva replica data was not clean up if the PVC and its namespace were deleted prior to scrub job completion.<br>- Fixed usage of StoragePool issue when RBAC settings are applied<br/>- Enhanced memory consumption usage for Jiva Volume |
| 0.5.2                            | [Release Notes](https://github.com/openebs/openebs/releases/tag/v0.5.2) | Changed the custom resource (Disk) used in earlier releases has been changed to Block Device.-Upgraded the base ubuntu images for the containers to fix the security vulnerabilities reported in Ubuntu Xenial.-Fixes an issue where Velero Backup/Restore was not working with hostpath Local PVs.<br>- Support to   set non-SSL Kubernetes endpoints to use by specifying the ENV variables on  maya-apiserver and  openebs-provisioner. |
| 0.5.1                            | [Release Notes](https://github.com/openebs/openebs/releases/tag/v0.5.1) | -Changed the custom resource (Disk) used in earlier releases has been changed to Block Device.-Upgraded the base ubuntu images for the containers to fix the security vulnerabilities reported in Ubuntu Xenial.<br>- Support to   use Jiva volume from CentOS iSCSI Initiator<br/>- Support openebs-k8s-provisioner to be launched in non-default namespace |
| 0.5.0                            | [Release Blog](https://blog.openebs.io/openebs-0-5-0-enables-customizable-storage-engines-using-storage-policies-dc585d5ee2f) <br><br>[Release Notes](https://github.com/openebs/openebs/releases/tag/v0.5.0) | -Changed the custom resource (Disk) used in earlier releases has been changed to Block Device.<br>- Enhanced   Storage Policy Enforcement Framework for Jiva.<br/>- Extend OpenEBS API Server to expose volume snapshot API.<br/>- Support for deploying OpenEBS via helm charts.<br/>- Sample Prometheus configuration for collecting OpenEBS Volume Metrics.<br/>- Sample Grafana OpenEBS Volume Dashboard - using the prometheus Metrics |
| 0.4.0                            | [Release Blog](https://blog.openebs.io/quick-update-on-openebs-v0-4-a-developer-friendly-release-6fe599fe254e)<br><br>[Release Notes](https://github.com/openebs/openebs/releases/tag/v0.4.0) | - Enhanced   MAYA cli support for managing snapshots,usage statistics.<br/>- Support OpenEBS Maya API Server uses the Kubernetes scheduler logic to place OpenEBS Volume Replicas on different nodes<br/>- Support Extended deployment of OpenEBS in AWS.<br/>- Support OpenEBS can be deployed in a minikube setup.<br/>- Enhanced openebs-k8s-provisioner from crashloopbackoff state |
| 0.3.0                            | [Release Blog](https://blog.openebs.io/openebs-on-the-growth-path-releases-0-3-94bd45724e)<br><br>[Release Notes](https://github.com/openebs/openebs/releases/tag/v0.3) | - Support   OpenEBS hyper-converged with Kubernetes Minion Nodes.<br/>- Enable OpenEBS via the openebs-operator.yaml<br/>-  Supports creation of OpenEBS volumes using Dynamic Provisioner.<br/>- Storage functionality and Orchestration/Management functionality is delivered as container images on DockerHub. |
| 0.2.0                            | [Release Blog](https://blog.openebs.io/openebs-sprinting-ahead-0-2-released-28f5001deeaa)<br><br>[Release Notes](https://github.com/openebs/openebs/releases/tag/v0.2) | - Integrated   OpenEBS FlexVolume Driver and Dynamically Provision OpenEBS Volumes into Kubernetes.<br/>- Support Maya api server to provides new AWS EBS-like API for   provisioning Block Storage.<br/>- Enhanced Maya api server to Hyper Converged with Nomad Scheduler.<br/>- Backup/Restore Data from Amazon S3.<br/>- Node Failure Resiliency Fixes |

<br>





## See Also:

### [cStor Roadmap](v110/docs/next/cstor.html#cstor-roadmap)

### [OpenEBS FAQ](v110/docs/next/faq.html)

### [Container Attached Storage or CAS](v110/docs/next/cas.html)

<br><hr>

<br>




<!-- Hotjar Tracking Code for https://docs.openebs.io -->
<script>
   (function(h,o,t,j,a,r){
       h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
       h._hjSettings={hjid:785693,hjsv:6};
       a=o.getElementsByTagName('head')[0];
       r=o.createElement('script');r.async=1;
       r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
       a.appendChild(r);
   })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
</script>

<!-- Global site tag (gtag.js) - Google Analytics -->
<script async src="https://www.googletagmanager.com/gtag/js?id=UA-92076314-12"></script>
<script>
  window.dataLayer = window.dataLayer || [];
  function gtag(){dataLayer.push(arguments);}
  gtag('js', new Date());

  gtag('config', 'UA-92076314-12');
</script>
